<resources>


    <string name="drawer_open">open</string>
    <string name="drawer_closed">closed</string>
    <string name="refresh">Обновить</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="next">Next</string>
    <string name="back_to_login">Back To Login</string>
    <string name="description_input_fields_errors">Describes input fields errors</string>
    <string name="registration_success">You have successfully registred</string>
    <string name="login">Login</string>
    <string name="new_user_q">New user?</string>
    <string name="forgot_password_q">Forgot password?</string>

    <string name="error_unknown">An unknown error occurred.</string>
    <string name="error_login_server">Error connecting to server. Please try again later.</string>
    <string name="error_email_format">Invalid email format</string>
    <string name="error_username">Invalid username</string>
    <string name="error_password_format">Invalid password format</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="access_revoked">Access for \"%1$s\" has been revoked. Removing accountOneRead and logging out</string>
    <string name="user_agent">OneRead/Version %1$s/Build %2$s/Android %3$s</string>
</resources>
